--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <color name="zhongdeng_start">#f89d04</color>
     <color name="zhongdeng_end">#f67106</color>
-
+    <color name="f5f5f5">#f5f5f5</color>
     <color name="lianghao_start">#93d340</color>
     <color name="lianghao_end">#26b02b</color>
 
