--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,21 @@
 
     <color name="jihao_start">#47e3d3</color>
     <color name="jihao_end">#009deb</color>
+
+    <color name="white">#ffffffff</color>
+
+    <color name="transparent">#00000000</color>
+    <!-- 40% 透明度 -->
+    <color name="transparent_40">#66000000</color>
+    <!-- 50% 透明度 -->
+    <color name="transparent_50">#7f000000</color>
+    <!--60%透明-->
+    <color name="half_transparent">#99000000</color>
+    <color name="transparent_80">#CC000000</color>
+    <color name="transparent_30">#4b000000</color>
+    <color name="transparent_70">#B3000000</color>
+    <color name="transparent_15">#26000000</color>
+    <color name="color_app_red_style">#fb4d38</color>
+    <color name="color_2c">#1c1c1c</color>
+    <color name="color_2c2c2c">#2c2c2c</color>
 </resources>
